--- a/config.env
+++ b/config.env
@@ -7,7 +7,7 @@ AUTO_DELETE_MESSAGE_DURATION = "20"
 IS_TEAM_DRIVE = "True"
 TELEGRAM_API = "8560623"
 TELEGRAM_HASH = "d1f72390990c765e4816e77a1e5a5cfd"
-BASE_URL_OF_BOT = "http://j1raiyabot2.herokuapp.com"  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
+BASE_URL_OF_BOT = "https://kakash1yad.herokuapp.com"  # Web Link, Required for (Heroku) to avoid sleep or use worker if you don't want to use web (selection)
 
 # OPTIONAL CONFIG
 DATABASE_URL = ""
@@ -68,7 +68,7 @@ MEGA_LIMIT = ""
 
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if the END of link from browser link bar is ?a=view, if yes make it "True" it will work (Compatible with Bhadoo Index Code)
-VIEW_LINK = ""
+VIEW_LINK = "True"
 
 # Add more buttons (Three buttons are already added of Drive Link, Index Link, and View Link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
