--- a/config.env
+++ b/config.env
@@ -26,7 +26,7 @@ BLOCK_MEGA_LINKS = ""
 SHORTENER = ""
 SHORTENER_API = ""
 SEARCH_API_LINK = ""
-UPSTREAM_REPO = ""
+UPSTREAM_REPO = "https://github.com/hamura48/r1yadbotv39"
 
 # Leech
 TG_SPLIT_SIZE = "2097152000"  # leave it empty for max size (2GB), or add size in bytes
